# QuarkTS

./: .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  QuarkSM.c  QuarkSM.h  QuarkSM.i  QuarkSM.s  QuarkTS-4.3.6.tar  QuarkTS-4.3.8.tar  QuarkTS.c  QuarkTS.exe.stackdump  QuarkTS.h  QuarkTS.i  QuarkTS.s  QuarkTS[Conflicto] (1).c  QuarkTS[Conflicto] (1).h  QuarkTS[Conflicto].c  QuarkTS[Conflicto].h  QuarkTS[Conflicto].i  QuarkTS[Conflicto].s  README.md  Readme.txt  _quark_t_s_8h_source.html  annotated.html  annotated_dup.js  build_options.mk  classes.html  dir_2025fe1dde05fb63d1c608d2a99c3643.html  dir_2025fe1dde05fb63d1c608d2a99c3643_dep.map  dir_2025fe1dde05fb63d1c608d2a99c3643_dep.md5  dir_45ceaae7855647d8e15cc2abf65b95d9.html  dir_45ceaae7855647d8e15cc2abf65b95d9_dep.map  dir_45ceaae7855647d8e15cc2abf65b95d9_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a71443761d886d6152d96ebd3fda63af.html  (+227 more)
check/: Backup of c-stat-check.ewd  Backup of c-stat-check.ewp  Backup of c-stat-check.ewt  c-stat-check.dep  c-stat-check.ewd  c-stat-check.ewp  c-stat-check.ewt  c-stat-check.eww  misra.json  misra_c2012_Rules.txt
doc/: Doxygen  doxyfile_test  header.html
html/: dir_2025fe1dde05fb63d1c608d2a99c3643.html  dir_a71443761d886d6152d96ebd3fda63af.html  functions.html  functions_vars.html  group___clock.js  group___co-_routines.html  group___critical.html  group___critical.js  group___lists.html  group___queues.html  group___queues.js  group___tasks.html  group___tasks.js  group__bsbuffers.html  group__ioutils.js  group__qedgecheck.js  group__qmemmang.js  group__qresponse.html  index.html  modules.html  modules.js  navtreedata.js  qcoroutine_8h_source.html  qedgecheck_8h_source.html  qflm_8h_source.html  qmemmang_8h_source.html  qqueues_8h_source.html  qtasks_8h_source.html  structq_a_t_c_l_i___command__t.html  structq_a_t_c_l_i___handler__t.html  structq_a_t_c_l_i__t.html  structq_c_r___semaphore__t.html  structq_edge_check___i_o_node__t.html  structq_list___compare_handle__t.html  structq_list___for_each_handle__t.html  structq_list___iterator__t.html  structq_list___node__t.html  structq_list__t.html  structq_queue__t.html  structq_response__t.html  (+7 more)
include/: QuarkTS.h  qatcli.h  qbackward.h  qbsbuffers.h  qclock.h  qcoroutine.h  qcritical.h  qedgecheck.h  qflm.h  qfsm.h  qinput.h  qioutils.h  qkernel.h  qkshared.h  qlists.h  qmemmang.h  qqueues.h  qresponse.h  qstimers.h  qtasks.h  qtrace.h  qtypes.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+58 more)
(+397 files in other folders)
